[FIXED] Internal IP Error

--- a/roles/confluent.zookeeper/templates/zookeeper.properties.j2
+++ b/roles/confluent.zookeeper/templates/zookeeper.properties.j2
@@ -10,5 +10,5 @@ kerberos.removeRealmFromPrincipal=true
 {% endif %}
 {% endif %}
 {% for host in groups['zookeeper'] %}
-server.{{ hostvars[host]['zookeeper_id'] | default(groups.zookeeper.index(host) + 1)}}={{ zookeeper_current_node_hostname if host == inventory_hostname else host }}:{{zookeeper_peer_port}}:{{zookeeper_leader_port}}
+server.{{ hostvars[host]['zookeeper_id'] | default(groups.zookeeper.index(host) + 1)}}={{ hostvars[host]['internal_ip'] }}:{{zookeeper_peer_port}}:{{zookeeper_leader_port}}
 {% endfor %}
